// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTimelineItem is rendered 1`] = `
<div
  class="euiTimelineItem euiTimelineItem--verticalAlignTop css-1ai1cgh-euiTimelineItem-top"
>
  <div
    class="euiTimelineItemIcon css-1rezr3l-euiTimelineItemIcon"
  >
    <div
      class="euiTimelineItemIcon__content css-jvs3tc-euiTimelineItemIconContent"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--s euiAvatar--user css-ifcftd-euiAvatar-s-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          dot
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiTimelineItemEvent css-1ozjlze-euiTimelineItemEvent"
  >
    <p>
      I'm the children
    </p>
  </div>
</div>
`;

exports[`EuiTimelineItem props verticalAlign center is rendered 1`] = `
<div
  class="euiTimelineItem euiTimelineItem--verticalAlignCenter css-il1lt8-euiTimelineItem-center"
>
  <div
    class="euiTimelineItemIcon css-1rezr3l-euiTimelineItemIcon"
  >
    <div
      class="euiTimelineItemIcon__content css-jvs3tc-euiTimelineItemIconContent"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--s euiAvatar--user css-ifcftd-euiAvatar-s-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          dot
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiTimelineItemEvent css-1ozjlze-euiTimelineItemEvent"
  >
    <p>
      I'm the children
    </p>
  </div>
</div>
`;

exports[`EuiTimelineItem props verticalAlign top is rendered 1`] = `
<div
  class="euiTimelineItem euiTimelineItem--verticalAlignTop css-1ai1cgh-euiTimelineItem-top"
>
  <div
    class="euiTimelineItemIcon css-1rezr3l-euiTimelineItemIcon"
  >
    <div
      class="euiTimelineItemIcon__content css-jvs3tc-euiTimelineItemIconContent"
    >
      <div
        aria-label="dot"
        class="euiAvatar euiAvatar--s euiAvatar--user css-ifcftd-euiAvatar-s-user-subdued"
        role="img"
        title="dot"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          dot
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiTimelineItemEvent css-1ozjlze-euiTimelineItemEvent"
  >
    <p>
      I'm the children
    </p>
  </div>
</div>
`;
